bot split into author bot and user bot

--- a/Source/Microsoft.Teams.Apps.CompanyCommunicator/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.CompanyCommunicator/appsettings.json
@@ -15,8 +15,10 @@
     }
   },
   "AllowedHosts": "*",
-  "MicrosoftAppId": "[MicrosoftAppId]",
-  "MicrosoftAppPassword": "[MicrosoftAppPassword]",
+  "UserAppId": "[UserAppId]",
+  "UserAppPassword": "[UserAppPassword]",
+  "AuthorAppId": "[AuthorAppId]",
+  "AuthorAppPassword": "[AuthorAppPassword]",
   "ServiceBusConnection": "[Service Bus Connection]",
   "StorageAccountConnectionString": "[Storage Account Connection String]",
   "DisableCreatorUpnCheck": "false",
@@ -25,7 +27,7 @@
   "AllowedTenants": "[tenant list]",
   "ForceCompleteMessageDelayInSeconds": "86400",
   "ApplicationInsights": {
-      "InstrumentationKey": ""
+    "InstrumentationKey": ""
   },
   "i18n": {
     "DefaultCulture": "en-US",
